# cleanreport

./: .gitignore  1.30.0  environment.yml  pyproject.toml
config/: default.yaml
run/test3/: after_profile.json  ai_suggestions.md  before_profile.json  transform_log.json
runs/test3/: ai_suggestions.md
src/cleanreport/: __init__.py  cleaner.py  cli.py
src/cleanreport.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
